@@ -2,23 +2,23 @@
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="CombineConfiguration">
       <Entry build="True" name="MonodocEditor" configuration="Debug" />
-      <Entry build="True" name="EcmaUtils" configuration="Debug" />
+      <Entry build="True" name="EditorUtils" configuration="Debug" />
       <Entry build="True" name="Packages" configuration="" />
     </Configuration>
     <Configuration name="Release" ctype="CombineConfiguration">
       <Entry build="True" name="MonodocEditor" configuration="Release" />
-      <Entry build="True" name="EcmaUtils" configuration="Release" />
+      <Entry build="True" name="EditorUtils" configuration="Release" />
       <Entry build="True" name="Packages" configuration="" />
     </Configuration>
   </Configurations>
   <StartMode startupentry="MonodocEditor" single="True">
     <Execute type="None" entry="MonodocEditor" />
-    <Execute type="None" entry="EcmaUtils" />
+    <Execute type="None" entry="EditorUtils" />
     <Execute type="None" entry="Packages" />
   </StartMode>
   <Entries>
     <Entry filename="./MonodocEditor/MonodocEditor.mdp" />
-    <Entry filename="./EcmaUtils/EcmaUtils.mdp" />
+    <Entry filename="./EditorUtils/EditorUtils.mdp" />
     <Entry filename="./Packages.mdse" />
   </Entries>
 </Combine>
